# code-jam-2025

./: .gitignore  ARCH.md  CODEOWNERS  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/password_manager/: __init__.py
src/password_manager/app/: __init__.py  api.py
src/password_manager/backend/: database.py  vault.py
src/password_manager/components/: PasscodeInput.py  __init__.py  crypto.py  database.py  pages.py  vault.py
src/password_manager/components/credential_submitter/: credential_submitter.py  password_submitter_dropdown.py  password_submitter_wide.py
src/password_manager/components/login/: __init__.py
src/password_manager/components/login_register/: LoginRegister.py
src/password_manager/components/passcode_factories/: __init__.py  anagram.py  binary.py  dial_safe.py  guesser.py  longvideo.py  map.py  text.py  typst.py
src/password_manager/components/passcode_factories/snake/: __init__.py  snake_core.py  snake_test.py  vec2.py
src/password_manager/components/vault_view/: vault_view.py
src/password_manager/passcode_factories/: __init__.py  dial_safe.py  map.py
src/password_manager/types/: __init__.py
src/password_manager/util/: __init__.py  crypto.py  exceptions.py
tests/: test_api.py  test_app.py  test_crypto.py  test_vault.py
