[project]
# This section contains metadata about your project.
# Don't forget to change the name, description, and authors to match your project!
name = "password_manager"
description = "Add your description here"
authors = [
    { name = "Your Name" }
]
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "nicegui>=2.22.1",
]

[dependency-groups]
# This `dev` group contains all the development requirements for our linting toolchain.
# Don't forget to pin your dependencies!
# This list will have to be migrated if you wish to use another dependency manager.
dev = [
    "pre-commit~=4.2.0",
    "pytest-selenium>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-watcher>=0.4.2" ,
    "pytest>=8.4.1",
    "ruff~=0.12.2",
]

[virualenvs]
create = true
in-project = true

[tool.pytest.ini_options]
pythonpath = [ "src" ]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    'ignore::DeprecationWarning:^vbuild(\.|$)',
    'ignore::DeprecationWarning:^websockets\.legacy(\.|$)',
    'ignore::DeprecationWarning:^uvicorn\.protocols\.websockets(\.|$)',
]


[tool.ruff]
# Increase the line length. This breaks PEP8 but it is way easier to work with.
# The original reason for this limit was a standard vim terminal is only 79 characters,
# but this doesn't really apply anymore.
line-length = 119
# Target Python 3.12. If you decide to use a different version of Python
# you will need to update this value.
target-version = "py312"
# Automatically fix auto-fixable issues.
fix = true
# The directory containing the source code. If you choose a different project layout
# you will need to update this value.
src = ["src"]
exclude = ["tests"]

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Allow Any type in function args.
    "ANN401",
    # Imperative mood docstring.
    "D401",
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
]
